autocomplete for google map in add tour component

--- a/wanderlust/public/index.html
+++ b/wanderlust/public/index.html
@@ -40,5 +40,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCca7zM4LtiL7PygucWbisKSzAFLpp8Be0&libraries=places"></script>
   </body>
 </html>
